<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:layout_marginTop="@dimen/margin"
    android:layout_marginBottom="@dimen/margin"
    android:layout_marginRight="@dimen/margin"
    android:layout_marginLeft="@dimen/margin"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size"
        android:textColor="@color/design_default_color_on_secondary"
        android:text="@string/sign_up_text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/cardview_light_background"
        android:orientation="vertical"
        tools:ignore="PrivateResource">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/design_default_color_on_secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/design_default_color_on_secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:drawableStart="@drawable/ic_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/design_default_color_on_secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_name"
                android:drawableStart="@drawable/ic_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/design_default_color_on_secondary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/school"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_school"
                android:drawableStart="@drawable/ic_school" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtAlreadySignedIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="@dimen/text_size"
        android:textColor="@color/design_default_color_on_secondary"
        android:layout_below="@id/linearLayout"
        android:text="@string/already_have_an_account_click_to_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textSize="@dimen/text_size"
        android:textAllCaps="false"
        android:background="@color/design_default_color_secondary_variant"
        android:textColor="@color/design_default_color_on_secondary"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>